CSS bug: Small content in right side of content table causes overbleed.

--- a/src/main/resources/common/css/positioning-rackspace.css
+++ b/src/main/resources/common/css/positioning-rackspace.css
@@ -52,7 +52,7 @@ span.off     {  }
 #rax-leftnavigation {
     overflow: auto;
     position: absolute;
-    height: 98%;
+    height: 96%;
     top: 10px;
     bottom: 0;
     left: 10px;
